repository = "https://github.com/mssalvatore/changelog-formatter-commit-hook"

[project]
name = "changelog-formatter-commit-hook"
version = "v1.0.0"
description = "A pre-commit hook to automatically format CHANGELOG.md files"
authors = [
    {name = "Mike Salvatore", email = "mike.s.salvatore@gmail.com"}
]
license = "GPL-3.0-only"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
changelog-formatter = "changelog_formatter:main"

[tool.setuptools]
py-modules = ["changelog_formatter"]

[build-system]
requires = ["setuptools", "wheel"]

[tool.pytest.ini_options]
testpaths = ["test_changelog_formatter.py"]
python_files = ["test_*.py"]
